MOSIP-39741 added zgc
Signed-off-by: kameshsr <47484458+kameshsr@users.noreply.github.com>